# ImageLidarAlign-KITTI

./: README.md
cpp/: CMakeLists.txt
cpp/src/: imageLidarAlign.cpp  visPointCloud.cpp
matlab/: demo.m  imageLidarAlign.m  readCalib.m
python/: imageLidarAlign.py
